[tool.poetry]
name = "pentatron"
version = "0.1.0"
description = ""
authors = ["jimmy.callin <jimmy.callin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
stanfordnlp = "^0.2.0"
joblib = "^0.15.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.2"
autopep8 = "^1.5.2"
ipython = "^7.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
